<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">foodLog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="blah"></string>
    <string name="gender_pref_name">Gender</string>
    <string name="gender_pref_key">gender</string>
    <string name="kcal_pref_key">kcal</string>
    <string name="gender_pref_summary">Your gender</string>
    <string name="age_pref_name">Age</string>
    <string name="age_pref_key">age</string>
    <string name="age_pref_summary">Your age in years</string>
    <string name="height_pref_name">Height</string>
    <string name="height_pref_key">height</string>
    <string name="height_pref_summary">Your height in centimeter</string>
    <string name="weight_pref_name">Weight</string>
    <string name="weight_pref_key">weight</string>
    <string name="weight_pref_summary">Your weight in kilograms</string>
    <string name="lookup_serch_field_text">Search</string>
    <string name="api_key">HREPF3HUMKOUKKZTAK647</string>
    <string name="camera_description">Barcode scanner</string>
    <string name="pick_mealtime">Pick a mealtime</string>
    <string name="shared_pref">shared_pref</string>
    <string name="btn_lookup">Lookup</string>
    <string name="btn_new_meal">New Meal</string>
    <string name="btn_history">History</string>
    <string name="btn_settings">Settings</string>
    <string name="add_food_to_diary">add to diary</string>
    <string name="title_activity_new_meal">New meal</string>
    <string name="add_food_to_meal">add ingredient to meal</string>
    <string name="save_meal">save meal</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="diner">dinner</string>
    <string name="daily_kcal_pref_key">daily_kcal_pref_value</string>
    <string name="meal_kcal_pref_key">meal_kcal_pref_value</string>
    <string name="daily_kcal_pref_name">Daily kalories</string>
    <string name="daily_kcal_pref_summary">Your maximun daily intake</string>
    <string name="meal_kcal_pref_name">kCal per Meal</string>
    <string name="meal_kcal_pref_summary">Your maximum kCal intake per meal</string>
    <string name="exceed_meal_limit">You are going to exceed your meal limit! Are you sure you want to continue?</string>
    <string name="daily_meal_limit">You are going to exceed your daily limit! Are you sure you want to continue?</string>
    <string name="time_change_text">Change time</string>
    <string name="consumed_string">% of daily limit</string>
    <string name="detial_has_kcal">%1$d %2$s has %3$d kCal</string>
    <string name="help_history">Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</string>
    <string name="help_search">Use the search function to look up the food database for products by either textual search or by scanning the products barcode.</string>
    <string name="help_settings">Enter you personal information to use the calculated basal metabolic rate as daily calorie limit.</string>
    <string name="btn_help">Help</string>
    <string name="contact">For further information please contact us at foodlogger@fh-hagenberg.at or look up our website foodlogger.fh-hagenberg.at</string>
    <string name="no_product_found">Couldn\'t find a product</string>

</resources>