<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          android:layout_weight="1"
        android:background="@color/color_breakfast"
        android:text="@string/breakfast" 
        android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          android:layout_weight="1"
        android:background="@color/color_lunch"
        android:text="@string/lunch" 
        android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_diner"
        android:text="@string/diner" 
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
</LinearLayout>
    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>